# studify-bot

./: Dockerfile  base.py  conf.py  docker-compose-frog.yaml  docker-compose-mikrus.yaml  docker-compose-prod.yaml  docker-compose.yaml  docker-compose_prod.yaml  logger.py  main.py  parser.py  pyproject.toml  req.txt  requirements.txt  test.py
vault/: vault_settings.py
