[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Michał Wrona",email = "wronamichal01@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "selenium (>=4.31.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "hvac (>=2.3.0,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
