[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Michał Wrona",email = "wronamichal01@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "selenium (>=4.31.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "hvac (>=2.3.0,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "xlsx2html (>=0.6.2,<0.7.0)",
    "xls2xlsx (>=0.2.0,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''
